<resources>
    <string name="app_name">Ex072</string>
    <string name="enterSen">Enter parameters to solve the following equation: ax^2+bx+c</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="random">random</string>
    <string name="solution">solution</string>
    <string name="back">back</string>
    <string name="aError">The parameter A should be bigger or smaller than zero. Try again.</string>
    <string name="again">Try again.</string>
</resources>