<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >

    <Space
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="5" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="90"
        android:orientation="vertical">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="5" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="9"
            android:gravity="center"
            android:text="@string/enterSen"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:ignore="RtlCompat" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="8"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0px"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/a"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/eTA"
                    android:layout_width="match_parent"
                    android:layout_height="0px"
                    android:layout_weight="2"
                    android:ems="10"
                    android:inputType="numberSigned|numberDecimal" />
            </LinearLayout>

            <Space
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0px"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/b"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/eTB"
                    android:layout_width="match_parent"
                    android:layout_height="0px"
                    android:layout_weight="2"
                    android:ems="10"
                    android:inputType="numberSigned|numberDecimal" />
            </LinearLayout>

            <Space
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0px"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/c"
                    android:textAlignment="center"
                    android:textAllCaps="false"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/eTC"
                    android:layout_width="match_parent"
                    android:layout_height="0px"
                    android:layout_weight="2"
                    android:ems="10"
                    android:inputType="numberSigned|numberDecimal" />
            </LinearLayout>
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="horizontal">

            <Button
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:onClick="fillRandomChoises"
                android:text="@string/random" />

            <Space
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="1" />

            <Button
                android:layout_width="0px"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:onClick="goToSolve"
                android:text="@string/solution" />

        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="3" />

        <TextView
            android:id="@+id/showResult"
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="10"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            android:textStyle="italic" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="0px"
            android:layout_weight="5" />
    </LinearLayout>

    <Space
        android:layout_width="0px"
        android:layout_height="match_parent"
        android:layout_weight="5" />
</LinearLayout>